<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/point_green_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/location"
                android:textColor="@color/colorString" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_btn_white_light"
            android:drawableRight="@drawable/phone_green_icon"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/village_office"
            android:textColor="@color/colorString"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_btn_white_light"
            android:drawableRight="@drawable/phone_green_icon"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/police"
            android:textColor="@color/colorString"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_btn_white_light"
            android:drawableRight="@drawable/phone_green_icon"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/hospital"
            android:textColor="@color/colorString"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_btn_white_light"
            android:drawableRight="@drawable/phone_green_icon"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/team_sar"
            android:textColor="@color/colorString"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_btn_white_light"
            android:drawableRight="@drawable/add_icon"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/add_number"
            android:textColor="@color/colorString"
            android:textSize="16sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>