<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginVillagersAct">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="290dp"
        android:layout_height="176dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/vifast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <EditText
            android:id="@+id/phone_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_grey"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingLeft="16dp" />

        <EditText
            android:id="@+id/password_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_grey"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="16dp" />

        <TextView
            android:id="@+id/forget_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:gravity="right"
            android:text="@string/forget_password"
            android:textColor="@color/colorButton" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_btn_green_light"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/no_acnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/no_account"
            android:textColor="@color/colorButton"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:src="@drawable/daivers_tech"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>