<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrasiAct">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="127dp"
        android:layout_height="44dp"
        android:src="@drawable/vifast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorString"
            android:text="@string/regist_account"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fullname"
                android:textAllCaps="true"
                android:layout_marginLeft="4dp"
                android:textStyle="bold"
                android:textColor="@color/colorString"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/fullname_id2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text_grey"
                android:hint="ex: Dimas Imameza"
                android:inputType="text"
                android:paddingLeft="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/phone_number"
                android:textAllCaps="true"
                android:layout_marginLeft="4dp"
                android:textStyle="bold"
                android:textColor="@color/colorString"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/phone_id2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text_grey"
                android:hint="ex: 081233271xx"
                android:inputType="phone"
                android:paddingLeft="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/password"
                android:textAllCaps="true"
                android:layout_marginLeft="4dp"
                android:textStyle="bold"
                android:textColor="@color/colorString"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/password_id2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text_grey"
                android:hint="*********"
                android:inputType="textPassword"
                android:paddingLeft="16dp" />

            <Button
                android:id="@+id/btn_regist"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn_green_light"
                android:text="@string/create_account"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/daivers_tech"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>